@@ -38,8 +38,8 @@ extern "C" {
 #define MagickLibVersion  0x242100
 #define MagickLibVersionText  "1.4"
 #define MagickLibVersionNumber 24,21,0
-#define MagickChangeDate   "20200328"
-#define MagickReleaseDate  "snapshot-20200328"
+#define MagickChangeDate   "20200329"
+#define MagickReleaseDate  "snapshot-20200329"
 
 /*
   The MagickLibInterfaceNewest and MagickLibInterfaceOldest defines
